support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_extend_undefined.i
%module xxx

%extend foo {
    int bar() {
    }
};
